# cpp_effect_modern

./: CMakeLists.txt
Chapter01/: CMakeLists.txt  item01.hpp  item01_template_type_deduction.hpp  item02.hpp  item02_auto_type_deduction.hpp  item03.hpp  item03_decltype_deduction.hpp  item04.cpp
Chapter02/: item05.cpp  item06.cpp
Chapter03/: item07.cpp  item08.cpp  item09.cpp  item10.cpp  item11.cpp  item12.cpp  item13.cpp  item14.cpp  item15.cpp  item16.cpp
